--- a/scss/base/_var.scss
+++ b/scss/base/_var.scss
@@ -1,10 +1,8 @@
-$gradient1: hsl(249, 99%, 64%);
-$gradient2: hsl(278, 94%, 30%);
-$errorInput: hsl(0, 100%, 66%);
-$white: hsl(0, 0%, 100%);
-$light-grayish-violet: hsl(270, 3%, 87%);
-$dark-grayish-violet: hsl(279, 6%, 55%);
-$very-dark-violet: hsl(278, 68%, 11%);
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap');
 
-$fontF: 'Space Grotesk', sans-serif;
+$Almost-White:hsl(0,0%,98%);
+$Medium-Gray:hsl(0,0%,41%);
+$Almost-Black:hsl(0,0%,8%);
+
+$fontF:'Epilogue', sans-serif;
 
