--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
 /* Definimos las Custom properties */
 :root {
   /* Colores */
   --negro: #393939;
   /* Tipografía */
-  --tipo-principal: Helvetica, Arial, sans-serif;
+  --tipo-principal: v.$fontF;
   --tipo-secundaria: Verdana;
 }
 
@@ -128,12 +129,3 @@ body {
   /* (Opcional) */
   -moz-osx-font-smoothing: grayscale;
 }
-
-body {
-  font-family: "Space Grotesk", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  color: hsl(278, 68%, 11%);
-}
-
-/*# sourceMappingURL=style.css.map */
