--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,10 +1,12 @@
+@use './var' as v;
 /* Definimos las Custom properties */
+
 :root{
   /* Colores */
   --negro         : #393939;
   
   /* Tipografía */
-  --tipo-principal   : Helvetica, Arial, sans-serif;
+  --tipo-principal   : v.$fontF;
   --tipo-secundaria  : Verdana;
 }
   
