--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,96 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
+.header {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding-inline: 16px;
+}
+.header__logo {
+  width: 90px;
+}
+.header .header__btn-menu {
+  width: 32px;
+  height: 20px;
+  display: none;
+}
+.header .header__btn-close {
+  width: 27px;
+  z-index: 3;
+}
+.header .header__menu {
+  width: 15.125rem;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: orange;
+  padding-top: 5.625rem;
+}
+.header .header__menu .header__menu__list {
+  width: 242px;
+  margin-left: 24px;
+}
+.header .header__menu .header__menu__list .header__menu__list__item {
+  margin-bottom: 1.5625rem;
+}
+.header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__link {
+  color: hsl(0, 0%, 8%);
+  font-size: 1.1em;
+  font-weight: 700;
+  margin-bottom: 1.25rem;
+}
+.header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-block: 16px;
+}
+.header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item {
+  margin: 20px 16px;
+}
+.header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item .header__menu__list__sub-list__link {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: hsl(0, 0%, 8%);
+}
+.header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item .header__menu__list__sub-list__link img {
+  width: 30px;
+}
+.header .header__menu .header__menu__list__link--icon {
+  position: relative;
+  transition: all 0.3s;
+}
+.header .header__menu .header__menu__list__link--icon::after {
+  position: absolute;
+  content: url("../../assets/images/icon-arrow-down.svg");
+  top: 0rem;
+  right: 9rem;
+}
+.header .header__menu .header__login {
+  margin-top: 40px;
+  padding-inline: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  color: hsl(0, 0%, 8%);
+  font-weight: 400;
+}
+.header .header__menu .header__login .header__login__link--border {
+  border: 1px solid hsl(0, 0%, 8%);
+  padding: 15px 20px;
+  width: 100%;
+  text-align: center;
+  border-radius: 16px;
+  background-color: hsl(0, 0%, 98%);
+}
+
 /* Definimos las Custom properties */
 :root {
   /* Colores */
@@ -128,4 +219,8 @@ body {
   -webkit-font-smoothing: antialiased;
   /* (Opcional) */
   -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  background-color: hsl(0, 0%, 98%);
 }
