--- a/scss/css/style.scss
+++ b/scss/css/style.scss
@@ -1,1 +1,7 @@
-@use '../base/reset';
+@use "../component/header";
+@use "../base/reset";
+@use "../base/var" as v;
+
+.container{ 
+  background-color:v.$Almost-White;
+}
