--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,19 @@
   width: 27px;
   z-index: 3;
 }
-.header .header__menu {
+.header .header__menu.active {
   width: 15.125rem;
-  height: 100vh;
+  height: 130vh;
+}
+.header .header__menu {
+  width: 0;
+  height: 0;
   position: absolute;
   right: 0;
   top: 0;
-  background-color: orange;
+  background-color: hsl(0, 0%, 98%);
   padding-top: 5.625rem;
+  transition: all 300ms ease-in-out;
 }
 .header .header__menu .header__menu__list {
   width: 242px;
@@ -84,11 +89,12 @@
 }
 .header .header__menu .header__login .header__login__link--border {
   border: 1px solid hsl(0, 0%, 8%);
-  padding: 15px 20px;
+  padding: 0.9375rem 1.25rem;
   width: 100%;
   text-align: center;
   border-radius: 16px;
   background-color: hsl(0, 0%, 98%);
+  margin-bottom: 7.75rem;
 }
 
 /* Definimos las Custom properties */
@@ -222,5 +228,5 @@ body {
 }
 
 .container {
-  background-color: hsl(0, 0%, 98%);
+  background-color: hsl(0, 0%, 41%);
 }
