--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,59 @@
   margin-bottom: 7.75rem;
 }
 
+.content__hero {
+  width: 100%;
+  height: 18.75rem;
+  background-image: url("/assets/images/image-hero-mobile.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.content .content__title {
+  margin-top: 50px;
+  font-size: 2em;
+  font-weight: 700;
+  color: hsl(0, 0%, 8%);
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.content .content__text {
+  width: 100%;
+  padding-inline: 1rem;
+  text-align: center;
+  color: hsl(0, 0%, 41%);
+  font-size: 1.1em;
+  font-weight: 700;
+  line-height: 1.5em;
+}
+.content .content__btn-learn-More {
+  width: 137px;
+  height: 48px;
+  margin: 2rem auto;
+  text-align: center;
+  padding: 15px 1rem;
+  background-color: hsl(0, 0%, 8%);
+  color: hsl(0, 0%, 98%);
+  font-weight: 700;
+  font-size: 1em;
+  border-radius: 1rem;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution__brands {
+  width: 100%;
+  padding-inline: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid red;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
 /* Definimos las Custom properties */
 :root {
   /* Colores */
@@ -228,5 +281,5 @@ body {
 }
 
 .container {
-  background-color: hsl(0, 0%, 41%);
+  background-color: hsl(0, 0%, 98%);
 }
