feat(se terminan estilos generales del footer)

--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,14 @@
 .header .header__btn-menu {
   width: 32px;
   height: 20px;
-  display: none;
 }
 .header .header__btn-close {
   width: 27px;
   z-index: 3;
+  display: none;
 }
 .header .header__menu.active {
+  display: block;
   width: 15.125rem;
   height: 130vh;
 }
@@ -34,6 +35,7 @@
   background-color: hsl(0, 0%, 98%);
   padding-top: 5.625rem;
   transition: all 300ms ease-in-out;
+  display: none;
 }
 .header .header__menu .header__menu__list {
   width: 242px;
@@ -137,17 +139,19 @@
 .attribution {
   font-size: 11px;
   text-align: center;
+  color: hsl(0, 0%, 41%);
 }
 .attribution__brands {
   width: 100%;
   padding-inline: 1rem;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  border: 1px solid red;
+  gap: 1rem;
+  margin-bottom: 3rem;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  display: inline;
+  color: hsl(0, 0%, 8%);
 }
 
 /* Definimos las Custom properties */
@@ -281,5 +285,6 @@ body {
 }
 
 .container {
+  min-height: 100vh;
   background-color: hsl(0, 0%, 98%);
 }
