--- a/scss/component/_header.scss
+++ b/scss/component/_header.scss
@@ -17,15 +17,16 @@
   .header__btn-menu {
     width: 32px;
     height: 20px;
-    display: none;
+    
   }
   .header__btn-close {
     width: 27px;
     z-index: 3;
+    display: none;
   }
 
   .header__menu.active {
-   
+   display: block ;
     width: 15.125rem;
     height: 130vh;
     
@@ -39,6 +40,7 @@
     background-color: v.$Almost-White;
     padding-top: 5.625rem;
     transition: all 300ms ease-in-out;
+    display: none;
     
 
     .header__menu__list {
