--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
 .header {
   width: 100%;
-  height: 70px;
+  height: 4.375rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: relative;
-  padding-inline: 16px;
+  padding-inline: 1rem;
 }
 .header__logo {
-  width: 90px;
+  width: 5.625rem;
 }
 .header .header__btn-menu {
-  width: 32px;
-  height: 20px;
+  width: 2rem;
+  height: 1.25rem;
 }
 .header .header__btn-close {
-  width: 27px;
+  width: 1.6875rem;
   z-index: 3;
   display: none;
 }
 .header .header__menu.active {
   display: block;
-  width: 15.125rem;
+  width: 242px;
   height: 130vh;
 }
 .header .header__menu {
@@ -33,40 +33,43 @@
   right: 0;
   top: 0;
   background-color: hsl(0, 0%, 98%);
-  padding-top: 5.625rem;
+  padding-top: 90px;
   transition: all 300ms ease-in-out;
   display: none;
 }
 .header .header__menu .header__menu__list {
-  width: 242px;
-  margin-left: 24px;
+  width: 15.125rem;
+  margin-left: 1.5rem;
 }
 .header .header__menu .header__menu__list .header__menu__list__item {
-  margin-bottom: 1.5625rem;
+  margin-bottom: 25px;
 }
 .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__link {
-  color: hsl(0, 0%, 8%);
+  color: hsl(0, 0%, 41%);
   font-size: 1.1em;
   font-weight: 700;
-  margin-bottom: 1.25rem;
+  margin-bottom: 20px;
+}
+.header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__link:hover {
+  color: hsl(0, 0%, 8%);
 }
 .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-block: 16px;
+  margin-block: 1rem;
 }
 .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item {
-  margin: 20px 16px;
+  margin: 1.25rem 1rem;
 }
 .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item .header__menu__list__sub-list__link {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 1rem;
   color: hsl(0, 0%, 8%);
 }
 .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item .header__menu__list__sub-list__link img {
-  width: 30px;
+  width: 1.875rem;
 }
 .header .header__menu .header__menu__list__link--icon {
   position: relative;
@@ -75,30 +78,133 @@
 .header .header__menu .header__menu__list__link--icon::after {
   position: absolute;
   content: url("../../assets/images/icon-arrow-down.svg");
-  top: 0rem;
-  right: 9rem;
+  top: 0px;
+  right: 144px;
 }
 .header .header__menu .header__login {
-  margin-top: 40px;
-  padding-inline: 24px;
+  margin-top: 2.5rem;
+  padding-inline: 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 16px;
   color: hsl(0, 0%, 8%);
-  font-weight: 400;
+  font-weight: 700;
+}
+.header .header__menu .header__login .header__login__link {
+  color: hsl(0, 0%, 41%);
+}
+.header .header__menu .header__login .header__login__link:hover {
+  color: hsl(0, 0%, 8%);
 }
 .header .header__menu .header__login .header__login__link--border {
-  border: 1px solid hsl(0, 0%, 8%);
-  padding: 0.9375rem 1.25rem;
+  border: 0.0625rem solid hsl(0, 0%, 8%);
+  padding: 15px 20px;
   width: 100%;
   text-align: center;
-  border-radius: 16px;
+  border-radius: 1rem;
   background-color: hsl(0, 0%, 98%);
-  margin-bottom: 7.75rem;
+  margin-bottom: 124px;
+}
+.header .header__menu .header__login .header__login__link--border:hover {
+  background-color: hsl(0, 0%, 8%);
+  color: hsl(0, 0%, 98%);
 }
 
+@media screen and (min-width: 768px) {
+  .header {
+    max-width: 90rem;
+    margin: 0 auto;
+    padding: 32px 40px;
+  }
+  .header__btn-menu {
+    display: none;
+  }
+  .header .header__menu {
+    width: 100%;
+    height: 4.375rem;
+    margin-left: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 0;
+    position: relative;
+  }
+  .header .header__menu .header__menu__list {
+    width: fit-content;
+    height: 4.375rem;
+    display: flex;
+    gap: 2.5rem;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item {
+    margin-bottom: 0;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__link {
+    display: inline;
+    font-size: 1.1em;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list {
+    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    margin-block: 1rem;
+    background-color: hsl(0, 0%, 98%);
+    border-radius: 16px;
+    padding: 1.5rem;
+    box-shadow: 4px 9px 20px rgba(0, 0, 0, 0.4);
+    transition: all 0.5s ease-in-out;
+    display: none;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item {
+    margin: 0.3125rem 0;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item .header__menu__list__sub-list__link {
+    flex-wrap: row;
+    align-items: center;
+    gap: 1rem;
+    color: hsl(0, 0%, 8%);
+    transition: all 100ms ease;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item .header__menu__list__sub-list__link img {
+    width: 1rem;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item .header__menu__list__sub-list__link:hover {
+    font-weight: 700;
+    transform: scale(1, 1.1);
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list--list1 {
+    width: 153px;
+    height: 163px;
+    left: -34px;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list--list2 {
+    width: 119px;
+    height: 132px;
+    left: 8.5625rem;
+  }
+  .header .header__menu .header__menu__list .header__menu__list__link--icon::after {
+    top: 0;
+    right: -16px;
+  }
+  .header .header__menu .header__login {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2.5rem;
+    margin-top: 0;
+  }
+  .header .header__menu .header__login .header__login__link--border {
+    width: 6.5rem;
+    margin-bottom: 0;
+  }
+}
 .content__hero {
   width: 100%;
   height: 18.75rem;
@@ -134,6 +240,11 @@
   font-weight: 700;
   font-size: 1em;
   border-radius: 1rem;
+}
+.content .content__btn-learn-More:hover {
+  background-color: hsl(0, 0%, 98%);
+  color: hsl(0, 0%, 8%);
+  border: 1px solid hsl(0, 0%, 8%);
 }
 
 .attribution {
