--- a/scss/base/_var.scss
+++ b/scss/base/_var.scss
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
 
-$Almost-White:hsl(0,0%,98%);
-$Medium-Gray:hsl(0,0%,41%);
-$Almost-Black:hsl(0,0%,8%);
-
-$fontF:'Epilogue', sans-serif;
-
+$Almost-White: hsl(0, 0%, 98%);
+$Medium-Gray: hsl(0, 0%, 41%);
+$Almost-Black: hsl(0, 0%, 8%);
+$fontF: "Epilogue", sans-serif;
