--- a/scss/component/_main.scss
+++ b/scss/component/_main.scss
@@ -37,5 +37,11 @@
     font-size: 1em;
     border-radius: 1rem;
 
+    &:hover{
+      background-color: v.$Almost-White;
+      color: v.$Almost-Black;
+      border:1px solid v.$Almost-Black;
+    }
+
   }
 }
