--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,8 @@
 
 @media screen and (min-width: 768px) {
   .header {
-    max-width: 90rem;
-    margin: 0 auto;
     padding: 32px 40px;
+    border: 1px solid red;
   }
   .header__btn-menu {
     display: none;
@@ -159,7 +158,6 @@
     padding: 1.5rem;
     box-shadow: 4px 9px 20px rgba(0, 0, 0, 0.4);
     transition: all 0.5s ease-in-out;
-    display: none;
   }
   .header .header__menu .header__menu__list .header__menu__list__item .header__menu__list__sub-list__item {
     margin: 0.3125rem 0;
@@ -212,7 +210,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-.content .content__title {
+.content .content__container__title {
   margin-top: 50px;
   font-size: 2em;
   font-weight: 700;
@@ -220,16 +218,15 @@
   text-align: center;
   margin-bottom: 2rem;
 }
-.content .content__text {
-  width: 100%;
-  padding-inline: 1rem;
-  text-align: center;
+.content .content__container__text {
+  font-size: 1em;
+  font-weight: 400;
   color: hsl(0, 0%, 41%);
-  font-size: 1.1em;
-  font-weight: 700;
-  line-height: 1.5em;
+  line-height: 1.5rem;
+  text-align: center;
+  padding-inline: 1rem;
 }
-.content .content__btn-learn-More {
+.content .content__container__btn {
   width: 137px;
   height: 48px;
   margin: 2rem auto;
@@ -241,24 +238,87 @@
   font-size: 1em;
   border-radius: 1rem;
 }
-.content .content__btn-learn-More:hover {
+.content .content__container__btn:hover {
   background-color: hsl(0, 0%, 98%);
   color: hsl(0, 0%, 8%);
   border: 1px solid hsl(0, 0%, 8%);
 }
+.content .content__container__brands {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+.content .content__container__brands svg {
+  transform: scale(0.8);
+}
 
+@media screen and (min-width: 768px) {
+  .content {
+    width: 1153px;
+    height: 900px;
+    margin: 0 auto;
+    border: 1px solid blue;
+    display: grid;
+    grid-template-columns: 731px 487px;
+    grid-template-rows: auto 0 auto auto auto;
+    overflow: hidden;
+  }
+  .content .content__hero {
+    grid-column: 2/3;
+    grid-row: 1/5;
+    width: 100%;
+    height: 100%;
+    background-image: url("../../assets/images/image-hero-desktop.png");
+    background-size: cover;
+    background-position: center;
+    border: 1px solid red;
+  }
+  .content .content__container__title {
+    border: 1px solid red;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    width: 60%;
+    height: 127px;
+    margin-left: 100px;
+    font-size: 4.063em;
+    text-align: left;
+    margin-bottom: 0;
+  }
+  .content .content__container__text {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    width: 70%;
+    margin-left: 100px;
+    padding-inline: 1rem;
+    text-align: left;
+    font-size: 1.375em;
+    border: 1px solid blue;
+  }
+  .content .content__container__btn {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    width: 137px;
+    height: 48px;
+    margin: 2rem auto;
+    text-align: left;
+    padding: 15px 1rem;
+    background-color: hsl(0, 0%, 8%);
+    color: hsl(0, 0%, 98%);
+    font-weight: 700;
+    font-size: 1em;
+    border-radius: 1rem;
+  }
+  .content .content__container__btn:hover {
+    background-color: hsl(0, 0%, 98%);
+    color: hsl(0, 0%, 8%);
+    border: 1px solid hsl(0, 0%, 8%);
+  }
+}
 .attribution {
   font-size: 11px;
   text-align: center;
   color: hsl(0, 0%, 41%);
-}
-.attribution__brands {
-  width: 100%;
-  padding-inline: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 3rem;
 }
 .attribution a {
   display: inline;
@@ -385,7 +445,7 @@ svg {
 body {
   min-height: 100vh;
   font-size: 100%;
-  font-family: var(--tipo-principal);
+  font-family: "Epilogue", sans-serif;
   color: var(--negro);
   /* (Opcional) */
   font-smooth: always;
@@ -398,4 +458,11 @@ body {
 .container {
   min-height: 100vh;
   background-color: hsl(0, 0%, 98%);
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
 }
