--- a/scss/component/_header.scss
+++ b/scss/component/_header.scss
@@ -127,9 +127,8 @@
 
 @media screen and (min-width: 768px) {
   .header {
-    max-width: 90rem;
-    margin: 0 auto;
     padding: 32px 40px;
+    border: 1px solid red;
 
 
     &__btn-menu {
@@ -173,7 +172,7 @@
             padding: 1.5rem;
             box-shadow: 4px 9px 20px rgba(0, 0, 0, 0.4);
             transition: all 0.5s ease-in-out; 
-            display: none;
+            // display: none;
 
             &__item {
               margin: 0.3125rem 0;
