--- a/scss/component/_main.scss
+++ b/scss/component/_main.scss
@@ -1,4 +1,4 @@
-@use '../base/var' as v;
+@use "../base/var" as v;
 .content {
   &__hero {
     width: 100%;
@@ -7,41 +7,128 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-  .content__title {
-    margin-top: 50px;
-    font-size: 2em;
-    font-weight: 700;
-    color: v.$Almost-Black;
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-  .content__text {
-    width: 100%;
-    padding-inline: 1rem;
-    text-align:center;
-    color: v.$Medium-Gray;
-    font-size: 1.1em;
-    font-weight: 700;
-   
-    line-height: 1.5em;
-  }
-  .content__btn-learn-More {
-    width: 137px;
-    height: 48px;
-    margin: 2rem auto;
-    text-align: center;
-    padding: 15px 1rem;
-    background-color: v.$Almost-Black;
-    color: v.$Almost-White;
-    font-weight: 700;
-    font-size: 1em;
-    border-radius: 1rem;
-
-    &:hover{
-      background-color: v.$Almost-White;
+  .content__container {
+  
+    &__title {
+      margin-top: 50px;
+      font-size: 2em;
+      font-weight: 700;
       color: v.$Almost-Black;
-      border:1px solid v.$Almost-Black;
+      text-align: center;
+      margin-bottom: 2rem;
     }
+    &__text {
+      font-size: 1em;
+      font-weight: 400;
+      color: v.$Medium-Gray;
+      line-height: 1.5rem;
+      text-align: center;
+      padding-inline: 1rem;
+    }
+    &__btn {
+      width: 137px;
+      height: 48px;
+      margin: 2rem auto;
+      text-align: center;
+      padding: 15px 1rem;
+      background-color: v.$Almost-Black;
+      color: v.$Almost-White;
+      font-weight: 700;
+      font-size: 1em;
+      border-radius: 1rem;
 
+      &:hover {
+        background-color: v.$Almost-White;
+        color: v.$Almost-Black;
+        border: 1px solid v.$Almost-Black;
+      }
+    }
+    &__brands {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      margin-bottom: 3rem;   
+      
+
+      
+      svg {
+        transform: scale(.8);
+        
+        
+        
+
+      }
+      
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .content {
+    width: 1153px;
+    height: 900px;
+    margin: 0 auto;
+    border: 1px solid blue;
+    display: grid;
+    grid-template-columns: 731px 487px;
+    grid-template-rows: auto 0 auto auto auto;
+
+    overflow: hidden;
+
+    .content__hero {
+      grid-column: 2/3;
+      grid-row: 1/5;
+
+      width: 100%;
+      height: 100%;
+      background-image: url("../../assets/images/image-hero-desktop.png");
+      background-size: cover;
+      background-position: center;
+      border: 1px solid red;
+    }
+    .content__container {
+      &__title {
+        border: 1px solid red;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        width: 60%;
+        height: 127px;
+        margin-left: 100px;
+        font-size: 4.063em;
+        text-align: left;
+        margin-bottom: 0;
+      }
+      &__text {
+        grid-row: 3/4;
+        grid-column: 1/2;
+        width: 70%;
+        margin-left: 100px;
+        padding-inline: 1rem;
+        text-align: left;
+        font-size: 1.375em;
+        border: 1px solid blue;
+      }
+      &__btn {
+        grid-column: 1/2;
+        grid-row: 4/5;
+
+        width: 137px;
+        height: 48px;
+        margin: 2rem auto;
+        text-align: left;
+        padding: 15px 1rem;
+        background-color: v.$Almost-Black;
+        color: v.$Almost-White;
+        font-weight: 700;
+        font-size: 1em;
+        border-radius: 1rem;
+
+        &:hover {
+          background-color: v.$Almost-White;
+          color: v.$Almost-Black;
+          border: 1px solid v.$Almost-Black;
+        }
+      }
+    }
   }
 }
