--- a/scss/css/style.scss
+++ b/scss/css/style.scss
@@ -8,3 +8,11 @@
   min-height: 100vh;
   background-color: v.$Almost-White;
 }
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  
+}
