--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,6 @@
 @media screen and (min-width: 768px) {
   .header {
     padding: 32px 40px;
-    border: 1px solid red;
   }
   .header__btn-menu {
     display: none;
@@ -255,64 +254,70 @@
 
 @media screen and (min-width: 768px) {
   .content {
-    width: 1153px;
-    height: 900px;
-    margin: 0 auto;
-    border: 1px solid blue;
-    display: grid;
-    grid-template-columns: 731px 487px;
-    grid-template-rows: auto 0 auto auto auto;
-    overflow: hidden;
+    max-width: 1440px;
+    height: 700px;
+    margin: 60px auto 80px auto;
+    display: flex;
+    padding-left: 164px;
   }
   .content .content__hero {
-    grid-column: 2/3;
-    grid-row: 1/5;
     width: 100%;
     height: 100%;
     background-image: url("../../assets/images/image-hero-desktop.png");
-    background-size: cover;
+    background-size: contain;
     background-position: center;
-    border: 1px solid red;
+    order: 1;
+    margin-right: 134px;
+  }
+  .content .content__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
   }
   .content .content__container__title {
-    border: 1px solid red;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    width: 60%;
-    height: 127px;
-    margin-left: 100px;
+    width: 75%;
+    height: 7.9375rem;
     font-size: 4.063em;
     text-align: left;
-    margin-bottom: 0;
+    margin-bottom: 60px;
+    margin-top: 96px;
+    margin-left: 0;
+    line-height: 67px;
   }
   .content .content__container__text {
-    grid-row: 3/4;
-    grid-column: 1/2;
-    width: 70%;
-    margin-left: 100px;
-    padding-inline: 1rem;
-    text-align: left;
-    font-size: 1.375em;
-    border: 1px solid blue;
+    margin-top: 64px;
+    width: 85%;
+    text-align: start;
+    font-size: 1.1em;
+    padding-inline: 0;
   }
   .content .content__container__btn {
-    grid-column: 1/2;
-    grid-row: 4/5;
-    width: 137px;
-    height: 48px;
-    margin: 2rem auto;
-    text-align: left;
-    padding: 15px 1rem;
+    width: 165px;
+    height: 60px;
+    text-align: center;
+    padding: 1.25rem 1rem;
     background-color: hsl(0, 0%, 8%);
     color: hsl(0, 0%, 98%);
     font-weight: 700;
     font-size: 1em;
     border-radius: 1rem;
+    margin: 30px 0;
+    border: 1px solid transparent;
   }
   .content .content__container__btn:hover {
     background-color: hsl(0, 0%, 98%);
     color: hsl(0, 0%, 8%);
     border: 1px solid hsl(0, 0%, 8%);
+  }
+  .content .content__container__brands {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 3rem;
+    margin-top: 140px;
+  }
+  .content .content__container__brands svg {
+    transform: scale(1);
   }
 }
 .attribution {
