--- a/scss/component/_main.scss
+++ b/scss/component/_main.scss
@@ -8,7 +8,6 @@
     background-size: cover;
   }
   .content__container {
-  
     &__title {
       margin-top: 50px;
       font-size: 2em;
@@ -47,86 +46,82 @@
       width: 100%;
       display: flex;
       align-items: center;
-      margin-bottom: 3rem;   
-      
+      margin-bottom: 3rem;
 
-      
       svg {
-        transform: scale(.8);
-        
-        
-        
-
+        transform: scale(0.8);
       }
-      
     }
   }
 }
 
 @media screen and (min-width: 768px) {
   .content {
-    width: 1153px;
-    height: 900px;
-    margin: 0 auto;
-    border: 1px solid blue;
-    display: grid;
-    grid-template-columns: 731px 487px;
-    grid-template-rows: auto 0 auto auto auto;
-
-    overflow: hidden;
+    max-width: 1440px;
+    height: 700px;
+    margin: 60px auto 80px auto;    
+    display: flex;
+    padding-left: 164px;
 
     .content__hero {
-      grid-column: 2/3;
-      grid-row: 1/5;
-
       width: 100%;
       height: 100%;
       background-image: url("../../assets/images/image-hero-desktop.png");
-      background-size: cover;
+      background-size: contain;
       background-position: center;
-      border: 1px solid red;
+      order: 1;
+      margin-right: 134px;
     }
     .content__container {
+      display: flex;
+      flex-direction: column;
+      justify-content: left;
       &__title {
-        border: 1px solid red;
-        grid-column: 1/2;
-        grid-row: 2/3;
-        width: 60%;
-        height: 127px;
-        margin-left: 100px;
+        width: 75%;
+        height: 7.9375rem;
         font-size: 4.063em;
         text-align: left;
-        margin-bottom: 0;
+        margin-bottom: 60px;
+        margin-top: 96px;
+        margin-left: 0;
+        line-height: 67px;
       }
       &__text {
-        grid-row: 3/4;
-        grid-column: 1/2;
-        width: 70%;
-        margin-left: 100px;
-        padding-inline: 1rem;
-        text-align: left;
-        font-size: 1.375em;
-        border: 1px solid blue;
+        margin-top: 64px;
+        width: 85%;            
+        text-align: start;
+        font-size: 1.1em;
+        padding-inline: 0;
+        
       }
       &__btn {
-        grid-column: 1/2;
-        grid-row: 4/5;
-
-        width: 137px;
-        height: 48px;
-        margin: 2rem auto;
-        text-align: left;
-        padding: 15px 1rem;
+        width: 165px;
+        height: 60px;       
+        text-align: center;
+        padding: 1.25rem 1rem;
         background-color: v.$Almost-Black;
         color: v.$Almost-White;
         font-weight: 700;
         font-size: 1em;
         border-radius: 1rem;
+        margin: 30px 0;
+        border: 1px solid transparent;
 
         &:hover {
           background-color: v.$Almost-White;
           color: v.$Almost-Black;
           border: 1px solid v.$Almost-Black;
+        }
+      }
+      &__brands {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        margin-bottom: 3rem;
+        margin-top: 140px;
+  
+        svg {
+          transform: scale(1);
         }
       }
     }
