--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@
 .content__hero {
   width: 100%;
   height: 18.75rem;
-  background-image: url("./assets/images/image-hero-mobile.png");
+  background-image: url("../assets/images/image-hero-mobile.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -284,7 +284,7 @@
   .content .content__hero {
     width: 100%;
     height: 100%;
-    background-image: url("./assets/images/image-hero-desktop.png");
+    background-image: url("../assets/images/image-hero-desktop.png");
     background-size: contain;
     background-position: center;
     order: 1;
