--- a/scss/component/_main.scss
+++ b/scss/component/_main.scss
@@ -3,7 +3,7 @@
   &__hero {
     width: 100%;
     height: 18.75rem;
-    background-image: url("./assets/images/image-hero-mobile.png");
+    background-image: url("../assets/images/image-hero-mobile.png");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -59,14 +59,14 @@
   .content {
     max-width: 1440px;
     height: 700px;
-    margin: 60px auto 80px auto;    
+    margin: 60px auto 80px auto;
     display: flex;
     padding-left: 164px;
 
     .content__hero {
       width: 100%;
       height: 100%;
-      background-image: url("./assets/images/image-hero-desktop.png");
+      background-image: url("../assets/images/image-hero-desktop.png");
       background-size: contain;
       background-position: center;
       order: 1;
@@ -88,15 +88,14 @@
       }
       &__text {
         margin-top: 64px;
-        width: 85%;            
+        width: 85%;
         text-align: start;
         font-size: 1.1em;
         padding-inline: 0;
-        
       }
       &__btn {
         width: 165px;
-        height: 60px;       
+        height: 60px;
         text-align: center;
         padding: 1.25rem 1rem;
         background-color: v.$Almost-Black;
@@ -119,7 +118,7 @@
         align-items: center;
         margin-bottom: 3rem;
         margin-top: 140px;
-  
+
         svg {
           transform: scale(1);
         }
