--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@
   border-radius: 1rem;
   background-color: hsl(0, 0%, 98%);
   margin-bottom: 124px;
+  transition: background-color 0.5s;
 }
 .header .header__menu .header__login .header__login__link--border:hover {
   background-color: hsl(0, 0%, 8%);
@@ -257,6 +258,8 @@
   font-weight: 700;
   font-size: 1em;
   border-radius: 1rem;
+  border: 1px solid transparent transparent;
+  transition: background-color 0.5s;
 }
 .content .content__container__btn:hover {
   background-color: hsl(0, 0%, 98%);
