--- a/scss/component/_main.scss
+++ b/scss/component/_main.scss
@@ -35,6 +35,8 @@
       font-weight: 700;
       font-size: 1em;
       border-radius: 1rem;
+      border: 1px solid transparent transparent;
+      transition: background-color 0.5s;
 
       &:hover {
         background-color: v.$Almost-White;
